--- a/vis/index.html
+++ b/vis/index.html
@@ -6,6 +6,7 @@
     <script src="lib/d3-legend.min.js"></script>
 </head>
 <body>
-
+    <h1>Hello</h1>
+    <h2>It works now</h2>
 </body>
 </html>
